Made seperate stylesheet, added media query, added link to test-page

--- a/TimeRegistrering/.target/views/index.scala.html
+++ b/TimeRegistrering/.target/views/index.scala.html
@@ -2,6 +2,7 @@
 
 @main("Welcome to Play 2.0") {
     
-    <a href="@(routes.TimeReg.index)">Gå til timeregistreringslogg</a>
+    <a href="@(routes.TimeReg.index)">Gå til timeregistreringslogg</a> <br />
+    <a href="@(routes.Responsive.index)">Gå til responsive-superopplegg!</a>
     
 }
