Added link, changed categorizr

--- a/TimeRegistrering/.target/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/.target/views/responsive/categorizr.scala.html
@@ -22,7 +22,7 @@
 	</div>
 	<div id="header">
 		<div id="menu">
-			<div class="menuButton menuButtonWidth">Gjør vi?</div>
+			<div class="menuButton menuButtonWidth">GjÃ¸r vi?</div>
 			<div class="menuButton menuButtonWidth">Er vi?</div>
 			<div class="menuButton menuButtonWidth">Jobb</div>
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontakt</div>
@@ -35,6 +35,10 @@
 	</div>
 	<div id="calendar"></div>
 
+
+	<script src="@routes.Assets.at("javascripts/categorizr.js")">
+		String type = categorizr.getType();
+	</script>
 
 </body>
 </html>
