--- a/TimeRegistrering/app/views/index.scala.html
+++ b/TimeRegistrering/app/views/index.scala.html
@@ -4,6 +4,7 @@
     
     <a href="@(routes.TimeReg.index)">Gå til timeregistreringslogg</a> <br />
     <a href="@(routes.Responsive.index)">Gå til responsive-superopplegg!</a> <br />
+    <a href="@(routes.Responsive.categorizr)">Gå til Categorizr-siden!</a> <br />
     <a href="@(routes.Web.index)">Gå til HTML5-siden!</a>
     
 }
