--- a/TimeRegistrering/app/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/app/views/responsive/categorizr.scala.html
@@ -5,13 +5,17 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<title>Categorizr Testing</title>
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
 <meta name=apple-mobile-web-app-capable content=yes>
 <meta name=apple-mobile-web-app-status-bar-style content=black>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/responsive.css")' type='text/css' />
+<script type="text/javascript" src="@routes.Assets.at("javascripts/categorizr.js")" ></script>
+<script type="text/javascript" >
+	
+</script>
 </head>
 <body>
 
@@ -36,9 +40,7 @@
 	<div id="calendar"></div>
 
 
-	<script src="@routes.Assets.at("javascripts/categorizr.js")">
-		String type = categorizr.getType();
-	</script>
+	
 
 </body>
 </html>
