--- a/TimeRegistrering/.target/views/responsive/device.scala.html
+++ b/TimeRegistrering/.target/views/responsive/device.scala.html
@@ -4,23 +4,32 @@
 
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-
-<meta name=apple-mobile-web-app-capable content=yes>
-<meta name=apple-mobile-web-app-status-bar-style content=black>
-<link rel='stylesheet' href='@routes.Assets.at("stylesheets/responsive.css")' type='text/css' />
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<title>Insert title here</title>
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+	
+	<meta name=apple-mobile-web-app-capable content=yes>
+	<meta name=apple-mobile-web-app-status-bar-style content=black>
+	
+	<link rel='alternate' href='@routes.Assets.at("stylesheets/responsive_desktop.css")' media="only screen and (touch-enabled: 0)" type='text/css' />
+	<link rel='alternate' href='@routes.Assets.at("stylesheets/responsive_tablet.css")' media="only screen and (min-width: 481px)" type='text/css' />
+	<link rel='alternate' href='@routes.Assets.at("stylesheets/responsive_mobile.css")' media="only screen and (max-width: 480px)" type='text/css' />
+	
+	<script src='@routes.Assets.at("javascripts/device.js")' type="text/javascript"></script>
 </head>
 <body>
-
 	<div id="top">
 		<div id="logo">
 			<img alt="logo" src="@routes.Assets.at("images/logo.png")" />
 		</div>
 	</div>
 	<div id="header">
+		<div>
+			<div id="typeDeviceDesktop"><h1>DESKTOP</h1></div>
+			<div id="typeDeviceTablet"><h1>TABLET</h1></div>
+			<div id="typeDeviceMobile"><h1>MOBILE</h1></div>
+		</div>
 		<div id="menu">
 			<div class="menuButton menuButtonWidth">Gjør vi?</div>
 			<div class="menuButton menuButtonWidth">Er vi?</div>
