--- a/TimeRegistrering/app/views/main.scala.html
+++ b/TimeRegistrering/app/views/main.scala.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app>
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
@@ -12,4 +12,6 @@
     <body>
         @content
     </body>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/angular.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/controllers.js")"></script>
 </html>
