--- a/TimeRegistrering/.target/views/web/index.scala.html
+++ b/TimeRegistrering/.target/views/web/index.scala.html
@@ -33,7 +33,15 @@
 		<span style="font-size: 30px; font-style: bold;">FAGBLOGG
 			&gt;&gt;</span>
 	</div>
-	<div id="calendar"></div>
+	
+	<div id="calendar">
+	
+	<div id="transition_boks">
+		<img id="transition" alt="logo" src="@routes.Assets.at("images/firefox.png")" />
+	</div>
+	</div>
+	
+	</div>
 
 
 </body>
