--- a/TimeRegistrering/public/stylesheets/web.css
+++ b/TimeRegistrering/public/stylesheets/web.css
@@ -104,4 +104,41 @@ html,body {
 		display:none;
 	}
 }
- 
+
+
+/*WEB
+/*---------------------------------------------*/
+
+#transition_boks{
+    position:relative;
+    width:530px;
+    height:530px;
+    margin:0 auto 10px;
+    border:1px #aaa solid;
+    padding:10px;
+}
+
+    #transition 
+    {
+  	 	-webkit-transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
+		-moz-transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
+		-o-transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
+		transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
+  }
+  
+
+  
+  #transition:hover,
+  #transition_boks.hover_effect 
+  {
+    -webkit-border-radius:30px;
+    -moz-border-radius:30px;
+    border-radius:30px;
+    -webkit-transform: rotate(720deg);
+	-moz-transform: rotate(720deg);
+	-o-transform: rotate(720deg);
+	-ms-transform: rotate(720deg);
+	transform: rotate(720deg);    
+	margin-left:420px;
+ 	
+  }
