removed unwanted space from image url

--- a/TimeRegistrering/.target/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/.target/views/responsive/categorizr.scala.html
@@ -20,7 +20,7 @@
 	jQuery(document).ready(function() {
 		//Dokumentet er klart javascript kode her forelopig..
 
-		console.log("javascript ok");
+		alert(categorizr());
 	});
 </script>
 
@@ -29,7 +29,7 @@
 
 	<div id="top">
 		<div id="logo">
-			<img alt="logo" src="@routes.Assets.at(" images/logo.png")" />
+			<img alt="logo" src="@routes.Assets.at("images/logo.png")" />
 		</div>
 	</div>
 	<div id="header">
