--- a/TimeRegistrering/app/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/app/views/responsive/categorizr.scala.html
@@ -13,14 +13,15 @@
 <meta name=apple-mobile-web-app-status-bar-style content=black>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/responsive.css")' type='text/css' />
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' >
-
-</script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizrplayground/k-cat.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizrplayground/a-cat.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' ></script>
 <script type="text/javascript">
   jQuery(document).ready(function() {
       //Dokumentet er klart javascript kode her forelopig..
-
-      console.log("javascript ok");
+    aMain();
+    kMain();
     });
 </script>
 
@@ -29,7 +30,7 @@
 
 	<div id="top">
 		<div id="logo">
-			<img alt="logo" src="@routes.Assets.at("images/logo.png")" />
+			<img alt="logo" src='@routes.Assets.at("images/logo.png")' />
 		</div>
 	</div>
 	<div id="header">
