Added alert showing what type of device you're visiting from

--- a/TimeRegistrering/.target/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/.target/views/responsive/categorizr.scala.html
@@ -20,7 +20,7 @@
 	jQuery(document).ready(function() {
 		//Dokumentet er klart javascript kode her forelopig..
 
-		alert(categorizr());
+		alert("You are visiting this page from a " + categorizr());
 	});
 </script>
 
