--- a/TimeRegistrering/app/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/app/views/responsive/categorizr.scala.html
@@ -20,7 +20,7 @@
 	jQuery(document).ready(function() {
 		//Dokumentet er klart javascript kode her forelopig..
 
-		console.log("javascript ok");
+		alert("You are visiting this page from a " + categorizr());
 	});
 </script>
 
