Begynt aa targete SG3

--- a/TimeRegistrering/.target/views/responsive/index.scala.html
+++ b/TimeRegistrering/.target/views/responsive/index.scala.html
@@ -28,7 +28,9 @@
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontakt</div>
 		</div>
 	</div>
-	<div id="news"></div>
+	<div id="news">
+		<div id="samsungGalaxyS3"><h1>Samsungnyheter</h1></div>
+	</div>
 	<div id="fag">
 		<span style="font-size: 30px; font-style: bold;">FAGBLOGG
 			&gt;&gt;</span>
