--- a/TimeRegistrering/.target/views/web/index.scala.html
+++ b/TimeRegistrering/.target/views/web/index.scala.html
@@ -22,19 +22,22 @@
 	</div>
 	<div id="header">
 		<div id="menu">
-			<div class="menuButton menuButtonWidth">GjÃ¸r vi?</div>
+			<div class="menuButton menuButtonWidth">Gjør vi?</div>
 			<div class="menuButton menuButtonWidth">Er vi?</div>
 			<div class="menuButton menuButtonWidth">Jobb</div>
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontakt</div>
 		</div>
 	</div>
 	<div id="news"></div>
+	<div id="transition-boks">
+	<img id="transition" alt="cubic" src="@routes.Assets.at("images/Blender-mesh-cube.png")" />
+	</div>
 	<div id="fag">
 		<span style="font-size: 30px; font-style: bold;">FAGBLOGG
 			&gt;&gt;</span>
 	</div>
 	<div id="calendar"></div>
-
+	
 
 </body>
 </html>
