Animation lagt til

--- a/TimeRegistrering/.target/views/web/index.scala.html
+++ b/TimeRegistrering/.target/views/web/index.scala.html
@@ -28,27 +28,18 @@
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontakt</div>
 		</div>
 	</div>
-	<div id="news"></div>
-	<div id="transition-boks">
-	<img id="transition" alt="cubic" src="@routes.Assets.at("images/Blender-mesh-cube.png")" />
-	</div>
-	<div id="fag">
-		<span style="font-size: 30px; font-style: bold;">FAGBLOGG
-			&gt;&gt;</span>
-	</div>
-
-	<div id="calendar"></div>
-	
 
 	
-	<div id="calendar">
 	
 	<div id="transition_boks">
-		<img id="transition" alt="logo" src="@routes.Assets.at("images/firefox.png")" />
-	</div>
+		<img id="transition" alt="logo" src="@routes.Assets.at("images/firefox.png")">
 	</div>
 	
 	
+	<div id="animationboks">
+	    <div id="myanimation"></div>
+	
+	</div>
 
 
 
