--- a/TimeRegistrering/.target/views/web/index.scala.html
+++ b/TimeRegistrering/.target/views/web/index.scala.html
@@ -30,13 +30,14 @@
 	</div>
 
 	
-	
-	<div id="transition_boks">
+	<h2>Transformation</h2>
+	<div class="boks">
 		<img id="transition" alt="logo" src="@routes.Assets.at("images/firefox.png")">
 	</div>
 	
 	
-	<div id="animationboks">
+	<h2>My First Animation</h2>
+	<div class="boks">
 	    <div id="myanimation"></div>
 	
 	</div>
