--- a/TimeRegistrering/public/stylesheets/web.css
+++ b/TimeRegistrering/public/stylesheets/web.css
@@ -112,7 +112,7 @@ html,body {
 /*---------------------------------------------*/
 
 
-#transition_boks{
+.boks{
     position:relative;
     width:530px;
     height:530px;
@@ -145,17 +145,6 @@ html,body {
 	margin-left:420px;
  	
   }
-
-#animationboks{
-	position:relative;
-    width:530px;
-    height:530px;
-    margin:0 auto 10px;
-    border:1px #aaa solid;
-    padding:10px;
-	
-}
-
 
 #myanimation{
    width:100px;
