--- a/TimeRegistrering/.target/views/web/index.scala.html
+++ b/TimeRegistrering/.target/views/web/index.scala.html
@@ -5,7 +5,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<title>HTLM5/CSS3</title>
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
@@ -42,7 +42,7 @@
 	
 	</div>
 
-
+	
 
 </body>
 </html>
