--- a/TimeRegistrering/public/stylesheets/web.css
+++ b/TimeRegistrering/public/stylesheets/web.css
@@ -111,20 +111,17 @@ html,body {
 /*WEB
 /*---------------------------------------------*/
 
-h2{
-	text-align:center;
-}
+
 
 .boks{
     position:relative;
     width:530px;
     height:530px;
-    margin:0 auto 10px;
     border:1px #aaa solid;
     padding:10px;
     background: #9c3;
     -webkit-transition: background 1s ease-out;
-    -moz-transition: background 1s linear;
+    -moz-transition: background 1s ease-out;
     -o-transition: background 1s ease-out;
     transition: background 1s ease-out;
 }
@@ -139,24 +136,35 @@ h2{
     -moz-transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
 	-o-transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
 	transition: all 4s cubic-bezier(1.000, -0.530, 0.405, 1.425);
-}
-  
+} 
 
   
-  #transition:hover,
-  #transition_boks.hover_effect 
-  {
-    -webkit-border-radius:30px;
-    -moz-border-radius:30px;
-    border-radius:30px;
-    -webkit-transform: rotate(720deg);
-	-moz-transform: rotate(720deg);
-	-o-transform: rotate(720deg);
-	-ms-transform: rotate(720deg);
-	transform: rotate(720deg);    
-	margin-left:420px;
+#transition:hover,
+#transition_boks.hover_effect 
+{
+  -webkit-border-radius:30px;
+  -moz-border-radius:30px;
+   border-radius:30px;
+  -webkit-transform: rotate(720deg);
+  -moz-transform: rotate(720deg);
+  -o-transform: rotate(720deg);
+   -ms-transform: rotate(720deg);
+   transform: rotate(720deg);    
+   margin-left:420px;
  	
-  }
+}
+
+#mytextbox{
+	background:WHITE;
+    -webkit-transition: background 1s ease-out;
+    -moz-transition: background 1s ease-out;
+    -o-transition: background 1s ease-out;
+    transition: background 1s ease-out;
+}
+
+#mytextbox:focus{
+	background:GRAY;
+}
 
 #myanimation{
    width:100px;
@@ -190,4 +198,16 @@ to {background:yellow;}
 {
 from {background:red;}
 to {background:yellow;}
+}
+
+
+#myCanvas
+{
+	border:solid 1px #234;
+	position:relative;
+    width:530px;
+    height:530px;
+    margin:0 auto;
+    border:1px #aaa solid;
+    padding:10px;
 }
