--- a/TimeRegistrering/.target/views/web/index.scala.html
+++ b/TimeRegistrering/.target/views/web/index.scala.html
@@ -50,18 +50,28 @@
 	
 
 <canvas id="myCanvas"; width="200" height="100" >
-Your browser does not support the HTML5 canvas tag.</canvas>
+Din browser støtter ikke canvas</canvas>
 
 
 <script type="text/javascript">
-	   var c=document.getElementById("myCanvas");
-       var ctx=c.getContext("2d");
-       var grd=ctx.createRadialGradient(75,50,5,90,60,100);
-       grd.addColorStop(0,"red");
-       grd.addColorStop(1,"white");
-       ctx.fillStyle=grd;
-       ctx.fillRect(0,0,150,80);
-	 	
+  var canvas = document.getElementById('myCanvas');
+  if (canvas.getContext){
+
+    // use getContext to use the canvas for drawing
+    var ctx = canvas.getContext('2d');
+
+    // Draw shapes
+    ctx.beginPath();
+    ctx.arc(75,75,50,0,Math.PI*2,true); 
+    ctx.moveTo(110,75);
+    ctx.arc(75,75,35,0,Math.PI,false);   
+    ctx.moveTo(65,65);
+    ctx.arc(60,65,5,0,Math.PI*2,true); 
+    ctx.moveTo(95,65);
+    ctx.arc(90,65,5,0,Math.PI*2,true);  
+    ctx.stroke();
+
+  } 
 	 </script>
 	 
 </body></html>
