Html siden inkluderer ingen css fil, ressursene blir lastet inn utifra behovet for hver enkelt device type. Bruker categorizr.js til å finne ut om devicen er av typen desktop eller mobil. Bruker yepnope.js til å laste inn tilhørende CSS

--- a/TimeRegistrering/app/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/app/views/responsive/categorizr.scala.html
@@ -11,12 +11,12 @@
 
 <meta name=apple-mobile-web-app-capable content=yes>
 <meta name=apple-mobile-web-app-status-bar-style content=black>
-<link rel='stylesheet' href='@routes.Assets.at("stylesheets/responsive.css")' type='text/css' />
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' ></script>
 <script type="text/javascript" src='@routes.Assets.at("javascripts/categorizrplayground/k-cat.js")' ></script>
 <script type="text/javascript" src='@routes.Assets.at("javascripts/categorizrplayground/a-cat.js")' ></script>
 <script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/yepnope.1.5.4-min.js")'></script>
 <script type="text/javascript">
 	jQuery(document).ready(function() {
 		//Dokumentet er klart javascript kode her forelopig..
