Lagt til android spesifikk target-densitydpi=device-dpi og prøvd oss frem med spesifikk detektering av mobiler med ulik oppløsning

--- a/TimeRegistrering/app/views/responsive/index.scala.html
+++ b/TimeRegistrering/app/views/responsive/index.scala.html
@@ -6,8 +6,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Insert title here</title>
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+<!-- {<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />} -->
+    <meta name="viewport" content="width=device-width,
+    height=device-height, initial-scale=1.0,maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+
 
 <meta name=apple-mobile-web-app-capable content=yes>
 <meta name=apple-mobile-web-app-status-bar-style content=black>
@@ -22,7 +24,7 @@
 	</div>
 	<div id="header">
 		<div id="menu">
-			<div class="menuButton menuButtonWidth">GjÃ¸r vi?</div>
+			<div class="menuButton menuButtonWidth">Gjør vi?</div>
 			<div class="menuButton menuButtonWidth">Er vi?</div>
 			<div class="menuButton menuButtonWidth">Jobb</div>
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontakt</div>
@@ -31,6 +33,12 @@
 	<div id="news">
 		<div id="samsungGalaxyS3"><h1>Samsungnyheter</h1></div>
 	</div>
+    <div id="todo">
+        <div id="htcSensation710"><h1>Htcnyheter</h1></div>
+    </div>
+    <div class="tull">
+        <div id="iPhone4S"><h1>iError</h1></div>
+    </div>
 	<div id="fag">
 		<span style="font-size: 30px; font-style: bold;">FAGBLOGG
 			&gt;&gt;</span>
