--- a/TimeRegistrering/app/views/main.scala.html
+++ b/TimeRegistrering/app/views/main.scala.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html ng-app>
+<html ng-app="timereg">
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
