--- a/TimeRegistrering/app/views/web/index.scala.html
+++ b/TimeRegistrering/app/views/web/index.scala.html
@@ -41,8 +41,8 @@
 	</div>
 	
 	
-<<<<<<< HEAD
-	<!--  <div id="transition_boks" class="skygge hover">-->
+
+	<div id="transition_boks" class="skygge hover">
 	
 	<div id="transition">
 		<div id="firefox" class="rullerende" ><img alt="logo" src="@routes.Assets.at("images/firefox.png")" /></div>
@@ -54,11 +54,11 @@
 </div>
 	
 	</div>
-=======
+
 	<h2>My First Animation</h2>
 	<div class="boks">
 	    <div id="myanimation"></div>
->>>>>>> cb0bf8ab7b58fa69774cc46c9746f915adb20412
+
 	
 	</div>
 
@@ -87,13 +87,9 @@ Din browser støtter ikke canvas</canvas>
     ctx.arc(90,65,5,0,Math.PI*2,true);  
     ctx.stroke();
 
-<<<<<<< HEAD
+ </script>
 
-</body>
-</html>
-=======
-  } 
-	 </script>
+
 	 
 </body></html>
->>>>>>> cb0bf8ab7b58fa69774cc46c9746f915adb20412
+
