--- a/TimeRegistrering/app/views/web/index.scala.html
+++ b/TimeRegistrering/app/views/web/index.scala.html
@@ -15,9 +15,8 @@
 
 </head>
 <body>
-	
-	 
-		<div id="logo">
+
+<div id="logo">
 			<img alt="logo" src="@routes.Assets.at("images/logo.png")">
 		</div>
 	
@@ -29,65 +28,53 @@
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontakt</div>
 		</div>
 	</div>
-
 	
 	<h2>Transformation</h2>
+
 	<div class="boks">
-		<img id="transition" alt="logo" src="@routes.Assets.at("images/firefox.png")">
-		<br />
-		
-		<br />
 		Klikk i tekstboksen: <input type="text" id="mytextbox" />
 	</div>
 	
-	
 
-	<div id="transition_boks" class="skygge hover">
-	
-	<div id="transition">
-		<div id="firefox" class="rullerende" ><img alt="logo" src="@routes.Assets.at("images/firefox.png")" /></div>
-		 <div id="ease" class="test_box"><p>HALLO</p></div>
-	</div>
-	
- 
-
-</div>
-	
+	<div id="transition_boks" class="skygge hover">	
+	    <div id="transition">
+		    <div id="firefox" class="rullerende" ><img alt="logo" src="@routes.Assets.at("images/firefox.png")" /></div>
+		     <div id="ease" class="test_box"><p>HALLO</p></div>
+	    </div>
 	</div>
 
 	<h2>My First Animation</h2>
 	<div class="boks">
 	    <div id="myanimation"></div>
-
-	
 	</div>
 
 	<h2>Canvas</h2>
 	
 
-<canvas id="myCanvas"; width="200" height="300" >
-Din browser støtter ikke canvas</canvas>
+    <canvas id="myCanvas"; width="200" height="300" >
+        Din browser støtter ikke canvas
+    </canvas>
 
 
-<script type="text/javascript">
-  var canvas = document.getElementById('myCanvas');
-  if (canvas.getContext){
+    <script type="text/javascript">
+      var canvas = document.getElementById('myCanvas');
+      if (canvas.getContext){
 
-    // use getContext to use the canvas for drawing
-    var ctx = canvas.getContext('2d');
+        // use getContext to use the canvas for drawing
+        var ctx = canvas.getContext('2d');
 
-    // Draw shapes
-    ctx.beginPath();
-    ctx.arc(75,75,50,0,Math.PI*2,true); 
-    ctx.moveTo(110,75);
-    ctx.arc(75,75,35,0,Math.PI,false);   
-    ctx.moveTo(65,65);
-    ctx.arc(60,65,5,0,Math.PI*2,true); 
-    ctx.moveTo(95,65);
-    ctx.arc(90,65,5,0,Math.PI*2,true);  
-    ctx.stroke();
+        // Draw shapes
+        ctx.beginPath();
+        ctx.arc(75,75,50,0,Math.PI*2,true); 
+        ctx.moveTo(110,75);
+        ctx.arc(75,75,35,0,Math.PI,false);   
+        ctx.moveTo(65,65);
+        ctx.arc(60,65,5,0,Math.PI*2,true); 
+        ctx.moveTo(95,65);
+        ctx.arc(90,65,5,0,Math.PI*2,true);  
+        ctx.stroke();
 
- </script>
+     </script>
 
 
 	 
