--- a/TimeRegistrering/app/views/web/index.scala.html
+++ b/TimeRegistrering/app/views/web/index.scala.html
@@ -12,7 +12,7 @@
 <meta name=apple-mobile-web-app-capable content=yes>
 <meta name=apple-mobile-web-app-status-bar-style content=black>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/web.css")' type='text/css' />
- <script type="text/javascript">
+ <!--  <script type="text/javascript">
       var canvas = document.getElementById('myCanvas');
       if (canvas.getContext){
 
@@ -31,6 +31,8 @@
         ctx.stroke();
 
      </script>
+     
+     -->
 </head>
 <body>
 
