--- a/TimeRegistrering/app/views/web/index.scala.html
+++ b/TimeRegistrering/app/views/web/index.scala.html
@@ -13,6 +13,8 @@
 <meta name=apple-mobile-web-app-status-bar-style content=black>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/web.css")' type='text/css' />
 
+ 
+
 </head>
 <body>
 
@@ -30,20 +32,22 @@
 	</div>
 	
 	<h2>Transformation</h2>
+	<h4>Form og bevegelse</h4>
+	
+	
+    <div id="transition">
+	    <div id="firefox" class="rullerende" ><img alt="logo" src="@routes.Assets.at("images/firefox.png")" /></div>
+	     <div id="ease" class="test_box"><p>HALLO</p></div>
+    </div>
 
+
+
+	<h4>Farge</h4>
+	
 	<div class="boks">
 		Klikk i tekstboksen: <input type="text" id="mytextbox" />
 	</div>
 	
-
-	<div id="transition_boks" class="skygge hover">	
-	    <div id="transition">
-		    <div id="firefox" class="rullerende" ><img alt="logo" src="@routes.Assets.at("images/firefox.png")" /></div>
-		     <div id="ease" class="test_box"><p>HALLO</p></div>
-	    </div>
-	</div>
-
-	<h2>My First Animation</h2>
 	<div class="boks">
 	    <div id="myanimation"></div>
 	</div>
