--- a/TimeRegistrering/app/views/web/index.scala.html
+++ b/TimeRegistrering/app/views/web/index.scala.html
@@ -31,36 +31,63 @@
 		</div>
 	</div>
 	
-	<h2>Transformation</h2>
-	<h4>Form og bevegelse</h4>
+	<h2>CSS3 - Transformation</h2>
 	
+	<fieldset><legend>Endringer ved oppdatering av siden</legend>
+	<div class="boks">
+	    <div id="myanimation"></div>
+	</div>
+	</fieldset>
 	
+	<fieldset><legend>Endringer ved hover</legend>
+
     <div id="transition">
 	    <div id="firefox" class="rullerende" ><img alt="logo" src="@routes.Assets.at("images/firefox.png")" /></div>
 	     <div id="ease" class="test_box"><p>HALLO</p></div>
     </div>
+    </fieldset>
 
 
 
-	<h4>Farge</h4>
 	
+	<fieldset><legend>Endringer ved klikk i input-boks</legend>
 	<div class="boks">
-		Klikk i tekstboksen: <input type="text" id="mytextbox" />
+		Tekstboksen: <input type="text" id="mytextbox" />
 	</div>
+	</fieldset>
 	
-	<div class="boks">
-	    <div id="myanimation"></div>
-	</div>
-
-	<h2>Canvas</h2>
 	
 
-    <canvas id="myCanvas"; width="200" height="300" >
+	<h2>HTML5 - Canvas</h2>
+	<fieldset><legend>Boks som kan tegnes i ved hjelp av javascript</legend>
+    <canvas id="myCanvas" class="boks" >
         Din browser støtter ikke canvas
     </canvas>
+    </fieldset>
 
 
-   
+
+
+   <script>
+
+ var canvas = document.getElementById("myCanvas");
+      if (canvas.getContext){
+
+        // use getContext to use the canvas for drawing
+        var ctx = canvas.getContext("2d");
+
+        // Draw shapes
+        ctx.beginPath();
+        ctx.arc(75,75,50,0,Math.PI*2,true); 
+        ctx.moveTo(110,75);
+        ctx.arc(75,75,35,0,Math.PI,false);   
+        ctx.moveTo(65,65);
+        ctx.arc(60,65,5,0,Math.PI*2,true); 
+        ctx.moveTo(95,65);
+        ctx.arc(90,65,5,0,Math.PI*2,true);  
+        ctx.stroke();
+        }
+</script> 
 
 
 	 
