--- a/TimeRegistrering/public/stylesheets/web.css
+++ b/TimeRegistrering/public/stylesheets/web.css
@@ -124,14 +124,25 @@ html,body {
     margin-bottom: 40px;
 }
 
+fieldset
+{
+	width:50%;
+	margin: 10px 0;
+}
+
+legend
+{
+	font-variant: small-caps;
+}
+
 #transition,
 .boks{
     position:relative;
-    width:50%;
+    width:95%;
     height:100px;
     border:1px #aaa solid;
     padding:10px;
-    margin: 10px 0;
+   
   }
   
  #transition 
@@ -255,14 +266,5 @@ to {background:yellow;}
 }
 
 
-#myCanvas
-{
-	border:solid 1px #234;
-	position:relative;
-    width:530px;
-    height:200px;
-    margin:0 auto;
-    border:1px #aaa solid;
-    padding:10px;
-}
+
 
