--- a/TimeRegistrering/.target/views/responsive/categorizr.scala.html
+++ b/TimeRegistrering/.target/views/responsive/categorizr.scala.html
@@ -13,14 +13,17 @@
 <meta name=apple-mobile-web-app-status-bar-style content=black>
 <link rel='stylesheet' href='@routes.Assets.at("stylesheets/responsive.css")' type='text/css' />
 <script src="http://code.jquery.com/jquery-latest.js"></script>
-<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")'>
-	
-</script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizrplayground/k-cat.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizrplayground/a-cat.js")' ></script>
+<script type="text/javascript" src='@routes.Assets.at("javascripts/categorizr.js")' ></script>
 <script type="text/javascript">
 	jQuery(document).ready(function() {
 		//Dokumentet er klart javascript kode her forelopig..
 
 		alert("You are visiting this page from a " + categorizr());
+    aMain();
+    kMain();
 	});
 </script>
 
@@ -34,7 +37,7 @@
 	</div>
 	<div id="header">
 		<div id="menu">
-			<div class="menuButton menuButtonWidth">GjÃ¸r vi?</div>
+			<div class="menuButton menuButtonWidth">Gjør vi?</div>
 			<div class="menuButton menuButtonWidth">Er vi?</div>
 			<div class="menuButton menuButtonWidth">Jobb</div>
 			<div class="menuButton menuButtonWidth" id="hideMe">Kontaktsdfdsfdsf</div>
