--- a/TimeRegistrering/app/views/timereg/registrer.scala.html
+++ b/TimeRegistrering/app/views/timereg/registrer.scala.html
@@ -1,15 +1,13 @@
 @main("Timeregisteret") {
     <div ng-controller="RegistrerTimerCtrl">
     	<form>
-    		Ansattnummer <input type="text" name="ansattnr" autofocus required ng-model="ansattnr"/><br />
+    		Ansattnummer <input type="text" name="ansattNr" autofocus required ng-model="ansattNr"/><br />
     		Dato <input type="date" name="dato" required ng-model="dato"/><br />
     		Arbeid <input type="text" name="arbeid" required ng-model="arbeid"/><br />
     		Antall timer <input type="text" name="timer" min="1" max="24" ng-model="timer"/><br />
     		Overtid <input type="checkbox" name="overtid" required ng-model="overtid"/><br />
-    		Kommentar <textarea name="kommentar" rows="5" cols="40" ng-model="kommentar"></textarea>
-    		
-    		
+    		Kommentar <textarea name="kommentar" rows="5" cols="40" ng-model="kommentar"></textarea>  		
     	</form>
-    	<button name="add" ng-click="printstatus()">Registrer timer</button>
+    	<button name="add" ng-click="registrerArbeid()">Registrer timer</button>
     </div>
 }
