--- a/TimeRegistrering/app/views/timereg/index.scala.html
+++ b/TimeRegistrering/app/views/timereg/index.scala.html
@@ -1,5 +1,33 @@
-@(arbeidListe: List[Arbeid])
+<!DOCTYPE html>
 
-@main("Timeregisteret") {
-    <div ng-view></div>
-}
+<html ng-app="myApp">
+<head>
+<title></title>
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/timereg.css")">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<!--<script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script> -->
+
+</head>
+<body>
+	<header id="navigationBar">
+		<a id="tilbakeKnapp">Tilbake</a>
+	
+		<a href="#/timereg" id="logo"><h1>Mesan</h1></a>
+	</header>
+	
+	<div id="container">
+		<div ng-view></div>
+	</div>	
+		
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/angular.min.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/app.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/services.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/controllers.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/filters.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("javascripts/directives.js")"></script>
+	<script src="@routes.Assets.at("javascripts/zepto.min.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/timereg.js")" type="text/javascript"></script>  
+</body>
+</html>
