--- a/TimeRegistrering/public/stylesheets/main.css
+++ b/TimeRegistrering/public/stylesheets/main.css
@@ -75,7 +75,7 @@ header {
 }
 
 #container {
-	min-height: 400px;
+	min-height: 300px;
 }
 
 #containerSpacer {
@@ -88,6 +88,7 @@ header {
 }
 
 #timeregTabell th {
+	font-size:15px;
 	text-align: left;
 }
 
